# couchdbpp

./: .gitignore  .hgignore  AUTHORS  CMakeLists.txt  COPYING  CouchDBPP.patch  NEWS  NOTICE  README  THANKS
include/couchdb/: Attachment.hpp  Communication.hpp  Connection.hpp  CouchDB.hpp  Database.hpp  Document.hpp  Exception.hpp  Revision.hpp  export.hpp
include/tinyjson/: tinyjson.hpp
src/: Attachment.cpp  Communication.cpp  Connection.cpp  Database.cpp  Document.cpp  Exception.cpp  Revision.cpp
test/: tester.cpp
