CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(couchdbpp)

SET(COUCHDBPP_LIB_MAJOR 0)
SET(COUCHDBPP_LIB_MINOR 0)
SET(COUCHDBPP_LIB_RELEASE 1)
SET(COUCHDBPP_LIB_NAME couchdbpp_${COUCHDBPP_LIB_MAJOR}-${COUCHDBPP_LIB_MINOR}-${COUCHDBPP_LIB_RELEASE})
SET(COUCHDBPP_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET(COUCHDBPP_INC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

SET(INSTALL_BIN_DIR "${CMAKE_INSTALL_PREFIX}/bin" 
    CACHE PATH "Installation directory for executables")
SET(INSTALL_LIB_DIR "${CMAKE_INSTALL_PREFIX}/lib" 
    CACHE PATH "Installation directory for libraries")
SET(INSTALL_INC_DIR "${CMAKE_INSTALL_PREFIX}/include" 
    CACHE PATH "Installation directory for headers")

FIND_PACKAGE(CURL REQUIRED)
FIND_PACKAGE(Boost REQUIRED)


INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${COUCHDBPP_INC_DIR})

SET(COUCHDBPP_BASE_SRCS
    ${COUCHDBPP_SRC_DIR}/Attachment.cpp
    ${COUCHDBPP_SRC_DIR}/Communication.cpp
    ${COUCHDBPP_SRC_DIR}/Connection.cpp
    ${COUCHDBPP_SRC_DIR}/Database.cpp
    ${COUCHDBPP_SRC_DIR}/Document.cpp
    ${COUCHDBPP_SRC_DIR}/Exception.cpp
    ${COUCHDBPP_SRC_DIR}/Revision.cpp)

SET(COUCHDBPP_BASE_INC
    ${COUCHDBPP_INC_DIR}/couchdb/Attachment.hpp
    ${COUCHDBPP_INC_DIR}/couchdb/Communication.hpp
    ${COUCHDBPP_INC_DIR}/couchdb/Connection.hpp
    ${COUCHDBPP_INC_DIR}/couchdb/CouchDB.hpp
    ${COUCHDBPP_INC_DIR}/couchdb/Database.hpp
    ${COUCHDBPP_INC_DIR}/couchdb/Document.hpp
    ${COUCHDBPP_INC_DIR}/couchdb/Exception.hpp
    ${COUCHDBPP_INC_DIR}/couchdb/Revision.hpp
    ${COUCHDBPP_INC_DIR}/couchdb/export.hpp)

SOURCE_GROUP("src" FILES ${COUCHDBPP_BASE_SRCS})
SOURCE_GROUP("include" FILES ${COUCHDBPP_BASE_INC})

IF(BUILD_SHARED_LIBS)
    IF(WIN32)
        ADD_LIBRARY(${COUCHDBPP_LIB_NAME} SHARED ${COUCHDBPP_BASE_SRCS} ${COUCHDBPP_BASE_INC})
    ELSE()
        ADD_LIBRARY(${COUCHDBPP_LIB_NAME} SHARED ${COUCHDBPP_BASE_SRCS} ${COUCHDBPP_BASE_INC})
    ENDIF(WIN32)
    TARGET_LINK_LIBRARIES(${COUCHDBPP_LIB_NAME} ${CURL_LIBRARIES})
ELSE(BUILD_SHARED_LIBS)
    ADD_LIBRARY(${COUCHDBPP_LIB_NAME} STATIC ${COUCHDBPP_BASE_SRCS} ${COUCHDBPP_BASE_INC})
ENDIF(BUILD_SHARED_LIBS)

SET_TARGET_PROPERTIES(${COUCHDBPP_LIB_NAME} PROPERTIES DEFINE_SYMBOL "COUCHDB_EXPORTS" )

INSTALL(TARGETS ${COUCHDBPP_LIB_NAME}
        RUNTIME DESTINATION "${INSTALL_BIN_DIR}"
        ARCHIVE DESTINATION "${INSTALL_LIB_DIR}"
        LIBRARY DESTINATION "${INSTALL_LIB_DIR}" )

INSTALL(DIRECTORY "${PROJECT_SOURCE_DIR}/include/couchdb" DESTINATION "${INSTALL_INC_DIR}")


# Example binaries
add_executable(tester test/tester.cpp)
target_link_libraries(tester ${COUCHDBPP_LIB_NAME})
add_test(tester tester)
